<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">


    <RelativeLayout
        android:id="@+id/ln_inactive"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_250sdp"
        android:layout_above="@+id/ln_claim"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@color/lightgrey">

        <ImageView
            android:id="@+id/ic_cam"
            android:layout_width="@dimen/_45sdp"
            android:layout_height="@dimen/_45sdp"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_cam_off" />

        <com.tebet.mojual.common.rtc.view.SquTextView
            android:id="@+id/tv_off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ic_cam"
            android:layout_centerHorizontal="true"
            android:text="@string/layout_cam_mic_not_active"
            android:textColor="@color/greytext" />

        <ImageView
            android:id="@+id/ic_mic"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_margin="@dimen/_5sdp"
            android:src="@drawable/ic_mic_off" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ln_claim"
        android:layout_width="@dimen/_225sdp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/_25sdp"
        android:layout_marginRight="@dimen/_25sdp"
        android:orientation="vertical">

        <com.tebet.mojual.common.rtc.view.SquTextView
            android:id="@+id/tv_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tv_claim"
            android:gravity="center"
            android:text="@string/layout_package_cam_mic_block"
            android:textColor="@color/navyblue"
            android:textSize="@dimen/_25ssp"
            app:font_style="bold" />

        <com.tebet.mojual.common.rtc.view.SquTextView
            android:id="@+id/tv_claim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/layout_package_allow_claim"
            android:textAlignment="center"
            android:textColor="@color/greytext"
            android:textSize="@dimen/_12ssp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/ln_allow"
        android:layout_width="@dimen/_225sdp"
        android:layout_height="wrap_content"
        android:layout_below="@id/ln_claim"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_40sdp"
        android:gravity="center"
        android:orientation="vertical">

        <com.tebet.mojual.common.rtc.view.SquButton
            android:id="@+id/btn_allow"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_weight="1"
            android:background="@drawable/rounded_btn_whitegrey"
            android:text="@string/layout_cam_mic_allow"
            android:textColor="@color/white"
            android:textSize="@dimen/_15ssp"
            app:font_style="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_10sdp" />

        <com.tebet.mojual.common.rtc.view.SquButton
            android:id="@+id/btn_go_setting"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_weight="1"
            android:background="@drawable/rounded_bg_green"
            android:text="@string/layout_cam_mic_go_settings"
            android:textColor="@color/white"
            android:textSize="@dimen/_15ssp"
            app:font_style="bold" />
    </LinearLayout>

    <com.tebet.mojual.common.rtc.view.SquTextView
        android:id="@+id/tv_guide"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ln_allow"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"
        android:lineSpacingExtra="@dimen/_2sdp"
        android:text="@string/layout_package_cam_mic_guide"
        android:textAlignment="center"
        android:textColor="@color/greytext"
        android:textSize="@dimen/_10ssp" />

</RelativeLayout>